--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,22 @@
 [metadata]
+name = build-flask-app
+author = Kushagra bainsla
+author-email = kushagrabainsla@gmail.com
+summary = Build Flask App is an excellent open source command-line tool for beginners, which allows you to setup and run modern flask web servers efficiently by running a single command.
 description-file = README.md
+description-content-type = text/markdown
+home-page = https://github.com/Kushagrabainsla/build-flask-app
+project_urls =
+    Source Code = https://github.com/Kushagrabainsla/build-flask-app
+license = MIT
+classifier =
+    Environment :: Console
+    Environment :: OpenStack
+    Intended Audience :: Developers
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: MIT License
+
+[entry_points]
+console_scripts =
+    build-flask-app = build_flask_app.main:main
