--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = build-flask-app
 author = Kushagra bainsla
 author-email = kushagrabainsla@gmail.com
-summary = Build Flask App is an excellent open source command-line tool for beginners, which allows you to setup and run modern flask web servers efficiently by running a single command.
+summary = Set up a modern flask web server by running one command.
 description-file = README.md
 description-content-type = text/markdown
 home-page = https://github.com/Kushagrabainsla/build-flask-app
